syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message ClientRequest {
    int64 startNumber = 1;
    int64 endNumber = 2;
}

message ServerResponse {
    int64 currentNumber = 1;
}

service RemoteService {
    rpc getNumbers(ClientRequest) returns (stream ServerResponse);
}
